--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Wolfram Kriesing <wolfram.kriesing@holidaycheck.com>",
   "license": "MIT",
   "devDependencies": {
+    "kavun": "^0.3.0",
     "local-web-server": "^2.5.2"
   }
 }
